1.0.0~alpha12 (2014-08-01)
- Accelerated resolving of video URLs (almost 2x as fast) 

1.0.0~alpha11 (2014-07-30)
- FIX: added a fallback for videos that require a login (works very fast?!?!)
- FIX: if username or password is missing reset the whole token logic 

1.0.0~alpha10 (2014-07-29)
- FIX: improved performance on decoding signatures for some videos 
- ADD: support for custom-created playlists
- FIX: sort own subscriptions
- ADD: enable/disable video, channel and/or playlist search

1.0.0~alpha9 (2014-07-28)
- FIX: removed debug

1.0.0~alpha8 (2014-07-28)
- ADD: login tests

1.0.0~alpha7 (2014-07-27)
- FIX: added support from freemake.com to decode signatures of some videos

1.0.0~alpha6 (2014-07-27)
- added support of playlists of a channel (first page only)
- optimized some major routines for easier support of all youtube's content 

1.0.0~alpha5 (2014-07-27)
- version bump for tests

1.0.0~alpha4 (2014-07-26)
- added runtime for each video (crazy hack)
- disabled debug

1.0.0~alpha3 (2014-07-26)
- little fixes regarding youtube channels

1.0.0~alpha2 (2014-07-26)
- added youtube channels and search
- added playback

1.0.0~alpha (2014-07-26)
- initial version for tests