@@ -25,4 +25,6 @@
 	<string id="30515">Videos</string>
 	<string id="30516">Channels</string>
 	<string id="30517">Playlists</string>
+	<string id="30518">Playback</string>
+	<string id="30519">Allow 3D</string>
 </strings>
