@@ -25,4 +25,6 @@
 	<string id="30515">Videos</string>
 	<string id="30516">Kanäle</string>
 	<string id="30517">Playlisten</string>
+	<string id="30518">Wiedergabe</string>
+	<string id="30519">3D zulassen</string>
 </strings>
