@@ -5,12 +5,16 @@
 		<setting id="username" type="text" label="30512" />
 	    <setting id="password" type="text" option="hidden" label="30513" />
 	    <setting type="sep" />
-		<setting id="videoQuality" type="enum" label="30501" lvalues="30502|30503|30504" default="1" />
-		<setting type="sep" />
 		<setting id="showFanart" type="bool" label="30500" default="true"/>
 		<setting id="showPlaylists" type="bool" label="30511" default="true"/>
 		<setting type="sep" />
 		<setting id="resultPerPage" type="enum" label="30510" values="5|10|15|20|25|30|35|40|45|50" default="9" />
+	</category>
+	
+	<!-- Playback -->
+	<category label="30518">
+		<setting id="videoQuality" type="enum" label="30501" lvalues="30502|30503|30504" default="1" />
+		<setting id="allow3D" type="bool" label="30519" default="false" />
 	</category>
 	
 	<!-- Search -->
