@@ -10,13 +10,17 @@ if __name__ == "__main__":
     """test 480p and 360p"""
     #videoInfos = video.getVideoStreamInfos('p4zdj-HO0uc')
     
-    #videoInfos = getVideoStreamInfos('zJ_ld0PjdQg')
-    #videoInfos = getVideoStreamInfos('yZ2RCJ28UPQ')
-    #videoInfos = getVideoStreamInfos('O-zpOMYRi0w')
+    """Some kind of 3D?"""    
     #videoInfos = video.getVideoStreamInfos('kqYuEKtDvAc')
     
+    """age-restricted"""
+    #videoInfos = video.getVideoStreamInfos('yZ2RCJ28UPQ')
+    
+    """vevo + signature"""
+    #videoInfos = video.getVideoStreamInfos('O-zpOMYRi0w')
+    
     start = time.time()
-    videoInfos = video.getVideoStreamInfos('p4zdj-HO0uc')
+    videoInfos = video.getVideoStreamInfos('yZ2RCJ28UPQ')
     end = time.time()
     
     diff = end-start
